@@ -1,3 +1,12 @@
+2011-05-13  Shujing Zhao  <pearly.zhao@oracle.com>
+
+	* libproc/common/Psymtab.c (Pbuild_file_symtab): Replace
+	/proc//object/a.out with /proc//exe.
+	* libproc/common/Pzone.c (Pfindmap): Replace /proc//path/a.out with
+	/proc//exe.
+	(Pbrandname): Remove.
+	* libproc/common/makefile: Remove Pcore.o.
+
 2011-05-12  Nick Alcock  <nick.alcock@oracle.com>
 
 	Purge zlib indirection machinery.
